[gd_scene load_steps=5 format=3 uid="uid://byxml2oexm302"]

[ext_resource type="Script" path="res://src/game_objects/light_source/light_source.gd" id="1_ff775"]
[ext_resource type="PackedScene" uid="uid://bgsk2vb2tsgsl" path="res://src/game_objects/light_beam/light_beam.tscn" id="2_kjal1"]
[ext_resource type="Texture2D" uid="uid://o4mo2w2ftx1v" path="res://addons/gut/images/yellow.png" id="3_d3yd8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0flg0"]

[node name="LightSource" type="Node2D"]
script = ExtResource("1_ff775")

[node name="LightBeam" parent="." instance=ExtResource("2_kjal1")]

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0flg0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("3_d3yd8")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
